added like all main stuff

--- a/ChoicePicked-OopsAllDead3.html
+++ b/ChoicePicked-OopsAllDead3.html
@@ -3,10 +3,14 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
-    <title>Sci-Fi Final Story Website</title>
+    <title>If I Can't Escape, Nobody Can</title>
   </head>
   <body>
-    <p>Ending 1</p>
+    <p>Ending 3 -</p>
+    <br>
+    <p>It was taking too long for Dipshit...
+    </p>   
+
     <!-- <img src="images/firefox-icon.png" alt="My test image" /> -->
   </body>
 </html>
