--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
-    <title>Sci-Fi Final Story Website</title>
+    <title>Sci-Fi Final Story</title>
   </head>
   <body>
     <p>The war was above, but they were sent below. Privileged few had the means to escape the new toxicity of the atmosphere. The rich, the connected, the lucky; all shuffled down the long and winding stairs, dim sunshine quickly replaced with harsh buzzing of fluorescent lights. Each step echoed loudly, drawing swirling dust up from still unfinished bunker walls. But the silence of voices was deafening.
@@ -24,7 +24,9 @@
     <p>Dipshit was lucky, lucky to be smart and capable at school. But most importantly, he was lucky to be the best coder the community had. Said to be a prodigy, and always looked to when something new was needed for the people. But Dipshit had an ulterior motive to be this motivated. He wanted to escape. There had been a vast library of knowledge about this program acquired by Dipshit over the years, and he was finally ready to use it. Still one question had nagged at Dipshit for a while now though, should he take Joe with him? Joe had helped him, taught him half of what he knew, and most importantly, had seemed to want to escape to something new just like Dipshit had.
     </p>
 
-    <a href="Ending1.html">Option 1 - Take Joe with you</a>
+    <a href="ChoicePicked-BringJoe2.html">Option 1 - Take Joe with you</a>
+    <br>
+    <a href="ChoicePicked-JoeLeftBehind.html">Option 2 - Leave Joe behind</a>
     <!-- <img src="images/firefox-icon.png" alt="My test image" /> -->
   </body>
 </html>
