added margins and pictures

--- a/ChoicePicked-BePatient.html
+++ b/ChoicePicked-BePatient.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
 <html lang="en-US">
   <head>
+    <link rel="stylesheet" href="styles/styles.css" />
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
     <title>You Were Patient</title>
   </head>
   <body>
-    <br>
     <p>You were patient and stuff
     </p>    
     
-    <a href="ChoicePicked-OopsAllDead3.html">Option 1 - you end up killing everyone</a>
+    <a href="ChoicePicked-OopsAllDead3.5.html">Option 1 - you end up killing everyone</a>
     <br>
-    <a href="ChoicePicked-FurbyDeath1.html">Option 2 - send to escape to furby page</a>
+    <a href="ChoicePicked-FurbyDeath.html">Option 2 - send to escape to furby page</a>
     <!-- <img src="images/firefox-icon.png" alt="My test image" /> -->
   </body>
 </html>
