--- a/ChoicePicked-BringJoe2.html
+++ b/ChoicePicked-BringJoe2.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en-US">
   <head>
+    <link rel="stylesheet" href="styles/styles.css" />
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
     <title>You Decided To Tell Joe</title>
@@ -15,6 +16,6 @@
     <p>“We really didn’t want to have to do this, son. And I wanted to believe so hard that you’d make the right choice, to turn back from this path. All of us did”. Dipshit’s eyes were moving frantically at this point, looking for a way to escape. “Goodbye”, said his father. And Dipshit turned into a million little particles that all began to spread out and fade away into nothing.
     </p>
 
-    <!-- <img src="images/firefox-icon.png" alt="My test image" /> -->
+    <img src="ImageEndings/Ending2.jpg" width="800" height="560"/>
   </body>
 </html>
