--- a/ChoicePicked-FurbyDeath.html
+++ b/ChoicePicked-FurbyDeath.html
@@ -4,13 +4,15 @@
     <link rel="stylesheet" href="styles/styles.css" />
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
-    <title>If I Can't Escape, Nobody Can</title>
+    <title>What... what is that?</title>
   </head>
   <body>
-    <p>Ending 3 -</p>
+    <p>you see the furby, what do you do?
+    </p>    
+
+    <a href="ChoicePicked-FurbyKillYou1.html">Option 1 - Scream at Furby and try to escape</a>
     <br>
-    <p>He had to get out. He just had to. Didn't matter how, where, at what cost; it just had to happen, now.
-    </p>   
+    <a href="ChoicePicked-FurbyHelpYou4.html">Option 2 - Use your brain to try and reason with the Furby</a>
 
     <!-- <img src="images/firefox-icon.png" alt="My test image" /> -->
   </body>
