--- a/ChoicePicked-FurbyHelpYou4.html
+++ b/ChoicePicked-FurbyHelpYou4.html
@@ -4,13 +4,13 @@
     <link rel="stylesheet" href="styles/styles.css" />
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
-    <title>If I Can't Escape, Nobody Can</title>
+    <title>It's so amazi- *dies*</title>
   </head>
   <body>
-    <p>Ending 3 -</p>
+    <p>Ending 4 -</p>
     <br>
-    <p>He had to get out. He just had to. Didn't matter how, where, at what cost; it just had to happen, now.
-    </p>   
+    <p>Furby helps you, but you still die
+    </p>    
 
     <!-- <img src="images/firefox-icon.png" alt="My test image" /> -->
   </body>
