--- a/ChoicePicked-JoeLeftBehind.html
+++ b/ChoicePicked-JoeLeftBehind.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en-US">
   <head>
+    <link rel="stylesheet" href="styles/styles.css" />
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
     <title>Joe Was Left Behind</title>
   </head>
-  <body>
-    <p>Ending 2 -</p>
+  <body>    
     <p>He really did like Joe, but they were too big of a risk in ruining his life work. They must find their own way out of this virtual hell. Now, how to escape… Dipshit had a pretty good idea of how to, but he was also impatient. Each day growing closer to his eventual victory, was another day where his patience waned just that little bit more. 
     </p>    
     
