--- a/ChoicePicked-OopsAllDead3.5.html
+++ b/ChoicePicked-OopsAllDead3.5.html
@@ -7,9 +7,9 @@
     <title>If I Can't Escape, Nobody Can</title>
   </head>
   <body>
-    <p>Ending 3 -</p>
+    <p>Ending 3.5 -</p>
     <br>
-    <p>He had to get out. He just had to. Didn't matter how, where, at what cost; it just had to happen, now.
+    <p>Was stoopid and everyone died.
     </p>   
 
     <!-- <img src="images/firefox-icon.png" alt="My test image" /> -->
