--- a/ChoicePicked-BePatient.html
+++ b/ChoicePicked-BePatient.html
@@ -7,12 +7,12 @@
     <title>You Were Patient</title>
   </head>
   <body>
-    <p>You were patient and stuff
+    <p>“I can wait.”, Garret thought. “The plan needs more time anyway, more documents to be uncovered, more code to be sorted through, more firewalls broken through.”. And so that’s what Garret did. Prepare for the day of his eventual escape.
     </p>    
     
-    <a href="ChoicePicked-OopsAllDead3.5.html">Option 1 - you end up killing everyone</a>
+    <a href="ChoicePicked-OopsAllDead3.5.html">Option 1 - Roll Dice</a>
     <br>
-    <a href="ChoicePicked-FurbyDeath.html">Option 2 - send to escape to furby page</a>
+    <a href="ChoicePicked-FurbyDeath.html">Option 2 - Roll Dice</a>
     <!-- <img src="images/firefox-icon.png" alt="My test image" /> -->
   </body>
 </html>
