--- a/ChoicePicked-FurbyDeath.html
+++ b/ChoicePicked-FurbyDeath.html
@@ -7,12 +7,24 @@
     <title>What... what is that?</title>
   </head>
   <body>
-    <p>you see the furby, what do you do?
-    </p>    
+    <p>He made friends in high places, gathering what he could from them. He got a promotion that allowed him to access deeper levels of code about the simulation, granting him invaluable knowledge on the best method to escape with.
+    </p>
 
-    <a href="ChoicePicked-FurbyKillYou1.html">Option 1 - Scream at Furby and try to escape</a>
+    <p>And then, it was ready. He was finally ready. To.. to see what was hidden behind this fake reality, finally.
+    </p>
+
+    <p>Garret stood in defiance at the glimmering screen in front of him. He knows he’s through. He knows it’s going to be over soon, he’s going to be free. And so with a final click of the mouse, Garret breathes in the fresh, crisp, but simulated air for just one last time. *click* The world starts spinning, stretching his body, falling into a void of nothing. No air, no heat, no feeling, but at the same time, there was everything. And as suddenly as it had started, it ended. He felt a bed below him, and heard the whirling of machines that surrounded him. Garret’s mind seemed to be tumbling around in his head, unused to the feeling of an actual, physical body. His eyes opened with an almost inhumane effort, and focused the room ever so slowly. A room. Concrete. Dim and damp. Beds on either side of him, all filled with human outlines. His joints seemed to be creaking from the disuse, and his heart and lungs felt weak too.
+    </p>
+
+    <p>But… wait, that wasn’t the only figure Garret could see, There was a red light drifting ever closer from the hallway, swaying side to side. And the sound of footsteps. Not human, mechanical, the sound of dozens of hydraulics moving in unison.
+    </p>
+
+    <p>“Oh my god.”, whispered Garret. The eyes stared, unfeeling, uncaring, calculating, waiting. Garret wanted to run, but was that the best choice? Could he reason with this beast instead maybe.
+    </p>
+
+    <a href="ChoicePicked-FurbyKillYou1.html">Option 1 - Try and run from the Machine.</a>
     <br>
-    <a href="ChoicePicked-FurbyHelpYou4.html">Option 2 - Use your brain to try and reason with the Furby</a>
+    <a href="ChoicePicked-FurbyHelpYou4.html">Option 2 - Try and reason with the Machine.</a>
 
     <!-- <img src="images/firefox-icon.png" alt="My test image" /> -->
   </body>
