--- a/ChoicePicked-FurbyKillYou1.html
+++ b/ChoicePicked-FurbyKillYou1.html
@@ -9,7 +9,8 @@
   <body>
     <p>Ending 1 -</p>
     <br>
-    <p>He had forgotten that when you don’t use any of your muscles for over 10 years, your body gets rid of them. He was stuck there, waiting. But then, a noise came from down the hall in front of him, and a shadowy figure appeared. “No.. NO! NO, PLEASE NO”, he croaked. “I’m sorry Dipshit, I must do this.” And it took a step towards him.
+    <p>“Get away.. GET AWAY FROM ME!!”, screamed Garret. Those gleaming red eyes stared back at him, motionless. But there was no emotion behind them, no hope at pleading. Garret had made a vast mistake. “Oh god”, he thought. Garret had forgotten that when you don’t use any of your muscles for over 10 years, your body gets rid of them. He was stuck there, waiting. “No.. NO! NO, PLEASE NO”, he croaked. “Calm down, Garret. I must do this.” And it took a step closer.
+      
     </p>    
 
     <img src="ImageEndings/Ending1.jpg" width="800" height="560"/>
