--- a/ChoicePicked-OopsAllDead3.5.html
+++ b/ChoicePicked-OopsAllDead3.5.html
@@ -9,9 +9,21 @@
   <body>
     <p>Ending 3.5 -</p>
     <br>
-    <p>Was stoopid and everyone died.
-    </p>   
+    <p>Garret made friends in high places, gathering what he could from them. He got a promotion that allowed him to access deeper levels of code about the simulation, granting him invaluable knowledge on the best method to escape with.
+    </p>
 
-    <!-- <img src="images/firefox-icon.png" alt="My test image" /> -->
+    <p>And then, it was ready. He was finally ready. To.. to see what was hidden behind this fake reality, finally.
+    </p>
+
+    <p>Garret stood in defiance at the glimmering screen in front of him. He knows he’s through. He knows it’s going to be over soon, he’s going to be free. And so with a final click of the mouse, Garret breathes in the fresh, crisp, but simulated air for just one last time. *click*
+    </p>
+
+    <p>“Ok… not super exciting…”. He tried it again, and again. But little did Garret know, he had made a mistake. The wrong piece of code had been changed. But as he was debugging a solution, there was no way for him to know outside of the simulation, something bad was happening.
+    </p>
+
+    <p>At first, there was just a shudder, clouds glitching back and forth out of the corner of the eye. And then sounds started looping. And then it froze. And all at once, fire engulfed one of the servers which was running the simulation, but there were backups, no worry. But then another caught on fire, and another, and another, and then there was finally silence for the first time.
+    </p>
+
+    <img src="ImageEndings/Ending3.jpg" width="800" height="560"/>
   </body>
 </html>
