--- a/ChoicePicked-OopsAllDead3.html
+++ b/ChoicePicked-OopsAllDead3.html
@@ -9,9 +9,21 @@
   <body>
     <p>Ending 3 -</p>
     <br>
-    <p>He had to get out. He just had to. Didn't matter how, where, at what cost; it just had to happen, now.
-    </p>   
+    <p>He had to get out. He just had to. Didn’t matter how, where, at what cost; it just had to happen, now. But it was secure, there was no way through. “Damn them!”, cursed Garret. He was so close to freedom, yet so far at the same time. The Creators of the simulation had thought of everything. It was near impossibly secure from Garret’s attempts to hack it. And so there was no way out. Except, for his own little backup plan.
+    </p>
 
-    <!-- <img src="images/firefox-icon.png" alt="My test image" /> -->
+    <p>The Creators had been thinking well ahead of time when creating the world, making sure that suicide was impossible once inside. But they weren’t the only ones who had thought ahead; long ago while still in High School, Garret had gotten interested in computers. And, naturally, as most teenagers do, had immediately started thinking about how to create the most havoc in the least amount of time possible. Eventually, he settled on this simple idea: How do you overheat a computer to the extent that the batteries connected to it explode in the shortest amount of time possible. And, of course, he had succeeded. There was a fair bit of chaos caused to a few people around town that week, but soon it lost its appeal to Garret and the flash drive was shoved in the back of his dresser, forgotten. Until now. The virus was successful in the virtual world, so Garret reasoned that it would also function correctly in the real world as well. It waited hidden away in his dresser now, but not for long.
+    </p>
+
+    <p>Hardly even a noticeable file size, it was the perfect thing to end Garret’s perpetual nightmare with ease. Because even if Garret’s mind wasn’t able to slip through the cracks in the programming, this hibernating beast would certainly be able to.
+    </p>
+
+    <p>“If I can’t escape, nobody can.” said Garret as he pressed send on the virus, which quickly spread across the community. It was searching for a weakness, and it didn’t take long to find one.
+    </p>
+
+    <p>At first, there was just a shudder, clouds glitching back and forth out of the corner of the eye. And then sounds started looping. And then it froze. And all at once, fire engulfed one of the servers which was running the simulation, but there were backups, no worry. But then another caught on fire, and another, and another, and then there was finally silence for the first time.
+    </p>
+
+    <img src="ImageEndings/Ending3.jpg" width="800" height="560"/>
   </body>
 </html>
